--- a/style.css
+++ b/style.css
@@ -17,10 +17,12 @@ p{
 
 body{
     font-family:  'Merriweather', serif;
+    width: 100%;
 }
 
 img{
     width: 100%;
+    /* background-sie: cover; */
 }
 
 a{
@@ -78,15 +80,19 @@ section{
     display: flex;
     padding-top: 10px;
     justify-content: space-between;
+    box-sizing: border-box;
 }
+
 
 .header-left{
     margin-left: 10px;
+    box-sizing: border-box;
 }
 
 .header-right{
     align-self: center;
-    margin-right: 10px;
+    padding-right: 10px;
+    box-sizing: border-box;
 }
 
 .header-right ul{
@@ -240,8 +246,8 @@ nav a:hover{
 
 .type{
     width: calc((100% - 30px) / 4);
-    min-width: 40px;
-    margin: 0 auto;
+    min-width: 200px;
+    margin: 6px auto;
     background: rgba(194, 194, 194, 0.5);
     border-radius: 15px;
 }
@@ -250,9 +256,10 @@ nav a:hover{
     font-size: 80px;
 }
 
-.type + .type{
+
+/* .type + .type{
     margin-left: 10px;
-}
+} */
 
 .space{
     padding: 10px;
@@ -290,6 +297,10 @@ nav a:hover{
     width: 29%;
     margin: 10px;
 }
+
+/* .portfolio img{
+    width: 100%;
+} */
 
 .caption{
     text-align: center;
@@ -344,6 +355,11 @@ footer{
     color: #000;
 }
 
+@media (max-width:770px) {
+    body{
+        width: 100vh;
+    }
+}
 
 /*small screen*/
 @media (max-width:599px) {
@@ -359,6 +375,11 @@ footer{
 
     .header-right{
         font-size: 8px;
+        width: 100%;
+    }
+
+    .header-right ul{
+        float: right;
     }
 
     .header-text{
