--- a/style1.css
+++ b/style1.css
@@ -21,8 +21,7 @@ a{
 
 main{
     text-align: center;
-    border: solid 1px red;
-    width: 80%;
+    width: 100%;
     margin: 0 auto;
 }
 
@@ -36,24 +35,39 @@ section + section{
     border-bottom: 1px solid black;
 }
 
+.animate{
+    opacity: 0;
+    transform: translateY(40px);
+    transition: opacity .5s, transform .5s;
+}
+
+.animate.appear{
+    opacity: 1;
+    transform: none;
+}
+
 
 /*header*/
 header{
     color: white;
-    margin-bottom: 250px;
+    margin-bottom: 220px;
 }
 
 .header-img{
     position: absolute;
     top: 0;
-    z-index: -1;
+    z-index: -10;
 }
 
 .header-top{
-    display: flex;
-    font-size: 8px;
+    /* display: flex; */
+    font-size: 12px;
     justify-content: space-between;
     margin: 4px;
+}
+
+.header-right li{
+    margin: 0 auto;
 }
 
 ul{
@@ -61,14 +75,15 @@ ul{
 }
 
 li + li{
-    margin-left: 4px;
+    margin-left: 10px;
 }
 
 .header-text{
     font-size: 8px;
     position: absolute;
-    top: 20%;
+    top: 25%;
     left: 30%;
+    width: 200px;
 }
 
 .header-text-under{
@@ -78,11 +93,55 @@ li + li{
     left: 30%;
 }
 
+.header-text p{
+    opacity: 0;
+    transition: opacity 1s;
+    position: absolute;
+}
+
+.header-text p.show{
+    opacity: 1;
+    transition-delay: 1.2s;
+}
+
+nav a:hover{
+    color: #ebc034;
+    transition: all .5s;
+}
+
+/*fadeIn*/
+@keyframes fadein{
+    0%{
+        opacity: 0;
+        transform: translateY(20px);
+    }
+
+    100%{
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+.fadein{
+    opacity: 0;
+    animation-name: fadein;
+    animation-duration: 1.5s;
+    animation-delay: .5s;
+    animation-timing-function: ease-out;
+    animation-fill-mode: forwards;
+}
+
 /*about*/
+.about{
+    width: 80%;
+    margin: 0 auto;
+}
+
 .about-img img{
     width: 150px;
     height: 150px;
     object-fit: cover;
+    margin-bottom: 15px;
 }
 
 .about-text{
@@ -93,6 +152,7 @@ li + li{
     display: flex;
     flex-wrap: wrap;
     line-height: 1.7em;
+    margin-top: 10px;
 }
 
 .about-text dt{
@@ -103,10 +163,14 @@ li + li{
     width: 80%;
 }
 
+.about-text #strong{
+    font-weight: bold;
+}
+
 /*service*/
 .service{
     background-image: url(img/coffee-gb26093171_1920.jpg);
-    padding: 40px 0;
+    padding: 60px 0;
     background-size: cover;
     background-attachment: fixed;
 }
@@ -115,10 +179,16 @@ li + li{
 
 .box{
     background-color: rgba(255, 255, 255, 0.4);
-    padding: 20px 0;
+    padding: 60px 0;
+    margin: 50px 0;
 }
 
 /*skils*/
+.skils{
+    width: 80%;
+    margin: 0 auto;
+}
+
 .skil{
     display: flex;
     flex-wrap: wrap;
@@ -138,6 +208,16 @@ li + li{
 
 .skil i{
     font-size: 70px;
+}
+
+.animate.delay{
+    transition-delay: .2s;
+}
+.animate.delay-more{
+    transition-delay: .4s;
+}
+.animate.delay-more-more{
+    transition-delay: .6s;
 }
 
 /*works*/
@@ -199,7 +279,7 @@ footer{
 }
 
 /*top-btn*/
-/* #to_top{
+#to_top{
     position: fixed;
     bottom: 16px;
     right: 16px;
@@ -209,4 +289,13 @@ footer{
 
 #to_top i{
     color: #000;
-} */
+    font-size: 32px;
+}
+
+#to_top i:hover{
+    color: rgba(0, 0, 0, 0.4);
+}
+
+#to_top.scrolled{
+    opacity: 1;
+}
