--- a/style1.css
+++ b/style1.css
@@ -10,6 +10,10 @@ img{
     width: 100%;
 }
 
+body{
+    font-family:  'Merriweather', serif;
+}
+
 li{
     list-style-type: none;
 }
@@ -30,9 +34,11 @@ section + section{
 }
 
 .main-h2{
+    
+    margin: 0 auto;
     margin-bottom: 30px;
-    display: inline-block;
     border-bottom: 1px solid black;
+    width: 130px;
 }
 
 .animate{
@@ -40,6 +46,8 @@ section + section{
     transform: translateY(40px);
     transition: opacity .5s, transform .5s;
 }
+
+
 
 .animate.appear{
     opacity: 1;
@@ -50,20 +58,29 @@ section + section{
 /*header*/
 header{
     color: white;
-    margin-bottom: 220px;
 }
 
-.header-img{
-    position: absolute;
-    top: 0;
-    z-index: -10;
+
+
+.background{
+    z-index: -1;
+}
+
+.background img{
+    pointer-events: none;
 }
 
 .header-top{
-    /* display: flex; */
     font-size: 12px;
     justify-content: space-between;
     margin: 4px;
+    position: absolute;
+    top: 5px;
+    z-index: 10;
+}
+
+.header-right a{
+    position: relative;
 }
 
 .header-right li{
@@ -78,19 +95,27 @@ li + li{
     margin-left: 10px;
 }
 
+.header-img{
+    position: relative;
+}
+
 .header-text{
     font-size: 8px;
     position: absolute;
-    top: 25%;
-    left: 30%;
-    width: 200px;
+    top: 30%;
+    left: 40%;
+    transform: translate(-50%, -50%);
+    width: 50%;
 }
 
 .header-text-under{
     font-size: 8px;
     position: absolute;
-    top: 40%;
-    left: 30%;
+    top: 45%;
+    left: 35%;
+    margin: auto;
+    transform: translate(-50%, -50%);
+    
 }
 
 .header-text p{
@@ -134,14 +159,36 @@ nav a:hover{
 /*about*/
 .about{
     width: 80%;
-    margin: 0 auto;
+    margin: 30px auto;
+}
+
+.animate.about-text{
+    transform: translateX(100px);
+}
+
+.animate.about-img{
+    transform: translateX(-100px);
+}
+
+.animate.about-text.appear{
+    transform: none;
+}
+
+.animate.about-img.appear{
+    transform: none;
 }
 
 .about-img img{
-    width: 150px;
-    height: 150px;
+    width: 200px;
+    height: 200px;
     object-fit: cover;
     margin-bottom: 15px;
+    border-radius: 5px;
+}
+
+.about-main{
+    padding: 80px 0;
+    overflow: hidden;
 }
 
 .about-text{
@@ -167,10 +214,13 @@ nav a:hover{
     font-weight: bold;
 }
 
+
+
 /*service*/
 .service{
     background-image: url(img/coffee-gb26093171_1920.jpg);
     padding: 60px 0;
+    background-size: 100%;
     background-size: cover;
     background-attachment: fixed;
 }
@@ -179,8 +229,9 @@ nav a:hover{
 
 .box{
     background-color: rgba(255, 255, 255, 0.4);
-    padding: 60px 0;
+    padding: 60px 30px;
     margin: 50px 0;
+    display: inline-block;
 }
 
 /*skils*/
@@ -192,6 +243,7 @@ nav a:hover{
 .skil{
     display: flex;
     flex-wrap: wrap;
+    /* justify-content: space-between; */
 }
 
 .type{
@@ -199,8 +251,13 @@ nav a:hover{
     border-radius: 15px;
     width: calc((100% - 18px) / 4);
     min-width: 300px;
-    margin: 6px auto;
+    margin: 6px auto;  
 }
+
+.no-style{
+    background-color: white;
+}
+
 
 .space{
     padding: 8px;
@@ -231,6 +288,8 @@ nav a:hover{
     padding: 20px;
     display: flex;
     flex-wrap: wrap;
+    width: 80%;
+    margin: 0 auto;
 }
 
 .portfolio-mask{
@@ -272,8 +331,7 @@ nav a:hover{
 /*footer*/
 footer{
     text-align: center;
-    margin-bottom: 20px;
-    background-color: black;
+    background-color: rgb(10,10,10);
     color: #fff;
     padding: 10px;
 }
@@ -298,4 +356,71 @@ footer{
 
 #to_top.scrolled{
     opacity: 1;
+}
+
+/*medium screen*/
+@media (min-width:600px) {
+    .header-top{
+        display: flex;
+        margin: 5px 15px;
+        font-size: 20px;
+        width: 98%;
+    }
+
+    .header-right{
+        align-self: center;
+    }
+
+    .header-right li{
+        margin-right: 20px;
+    }
+
+    .header-text{
+        font-size: 22px;
+        /* width: 300px;
+        left: 60%; */
+    }
+
+    .header-text-under{
+        font-size: 22px;
+        /* width: 400px;
+        left: 35%; */
+    }
+
+
+    /*about*/
+    .about-main{
+        display: flex;
+        margin: 0 auto;
+    }
+    
+    
+
+    .about-img{
+        width: 40%;
+        margin-right: 10px;
+    }
+
+    .about-text{
+        width: 60%;
+    }
+
+
+
+    
+}
+
+/*large screen*/
+@media (min-width:800px) {
+    .header-text{
+        font-size: 24px;
+        /* width: 400px;
+        left: 55%; */
+    }
+
+    .header-text-under{
+        font-size: 24px;
+        /* width: 500px;
+        left: 38%; */
+    }
 }
