--- a/style1.css
+++ b/style1.css
@@ -12,6 +12,7 @@ img{
 
 body{
     font-family:  'Merriweather', serif;
+    background-color: #d1d0cd;
 }
 
 li{
@@ -20,7 +21,7 @@ li{
 
 a{
     text-decoration: none;
-    color: white;
+    color: black;
 }
 
 main{
@@ -34,7 +35,6 @@ section + section{
 }
 
 .main-h2{
-    
     margin: 0 auto;
     margin-bottom: 30px;
     border-bottom: 1px solid black;
@@ -70,22 +70,22 @@ header{
     pointer-events: none;
 }
 
-.header-img::before{
+/* .header-img::before{
     content: "";
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
-    height: 98%;
+    height: 100%;
     background-color: rgba(0, 0, 0, 0.4);
-}
+} */
 
 .header-top{
     font-size: 12px;
     justify-content: space-between;
     margin: 4px;
     position: absolute;
-    top: 5px;
+    top: 0;
     z-index: 10;
 }
 
@@ -107,7 +107,28 @@ li + li{
 
 .header-img{
     position: relative;
+    height: 80vh;
+    width: 95%;
+    margin: 50px auto;
+    background-color: #000;
+    display: inline-block;
+    border-radius: 30px;
 }
+
+.header-img video{
+    width: 100%;
+    height: 100%;
+    border-radius: 30px;
+    object-fit: cover;
+    opacity: .7;
+}
+
+.background{
+    text-align: center;
+}
+
+
+
 
 .header-text{
     font-size: 12px;
@@ -169,8 +190,13 @@ nav a:hover{
 /*about*/
 .about{
     width: 80%;
-    margin: 30px auto;
+    margin:20px  auto;
+    margin-top: -15px;
+    background-color: white;
+    border-radius: 20px;
+    padding: 15px 30px;
 }
+
 
 .animate.about-text{
     transform: translateX(100px);
@@ -239,10 +265,11 @@ nav a:hover{
 
 
 .box{
-    background-color: rgba(255, 255, 255, 0.4);
+    background-color: rgba(255, 255, 255, 0.8);
     padding: 60px 30px;
     margin: 50px 0;
     display: inline-block;
+    border-radius: 10px;
 }
 
 /*skils*/
@@ -258,7 +285,7 @@ nav a:hover{
 }
 
 .type{
-    background-color: rgba(194, 194, 194, 0.5);
+    background-color: white;
     border-radius: 15px;
     width: calc((100% - 18px) / 4);
     min-width: 300px;
@@ -274,8 +301,9 @@ nav a:hover{
     padding: 8px;
 }
 
-.skil i{
-    font-size: 70px;
+.skil img{
+    width: 50%;
+    padding-top: 10px;
 }
 
 .animate.delay{
@@ -373,8 +401,8 @@ footer{
 @media (min-width:600px) {
     .header-top{
         display: flex;
-        margin: 5px 15px;
-        font-size: 20px;
+        margin: 2px 15px;
+        font-size: 16px;
         width: 98%;
     }
 
