--- a/style1.css
+++ b/style1.css
@@ -28,6 +28,8 @@ main{
     text-align: center;
     width: 100%;
     margin: 0 auto;
+    background-color: #d1d0cd;
+    padding-top: 40px;
 }
 
 section + section{
@@ -58,6 +60,7 @@ section + section{
 /*header*/
 header{
     color: white;
+    height: 100vh;
 }
 
 
@@ -75,7 +78,7 @@ header{
     font-size: 12px;
     justify-content: space-between;
     margin: 4px;
-    position: absolute;
+    position: fixed;
     top: 0;
     z-index: 10;
 }
@@ -104,6 +107,9 @@ li + li{
     background-color: #000;
     display: inline-block;
     border-radius: 30px;
+    position: fixed;
+    left: 2.5%;
+    z-index: -10;
 }
 
 .header-img video{
@@ -317,6 +323,7 @@ nav a:hover{
     border-radius: 30px;
     width: 95%;
     margin: 50px auto;
+    margin-bottom: 0;
 }
 
 
@@ -333,6 +340,7 @@ nav a:hover{
     flex: auto;
     height: auto;
     width: 25%;
+    padding: 20px;
     margin: 10px;
     overflow: hidden;
     border-radius: 30px;
@@ -357,6 +365,12 @@ nav a:hover{
 }
 
 
+/*bcolor*/
+.bcolor{
+    background-color: #d1d0cd;
+    content: "";
+    padding: 30px;
+}
 
 /*footer*/
 footer{
