--- a/style1.css
+++ b/style1.css
@@ -305,6 +305,10 @@ nav a:hover{
     padding-top: 10px;
 }
 
+.textalign{
+    text-align: left;
+}
+
 .animate.delay{
     transition-delay: .2s;
 }
@@ -340,8 +344,7 @@ nav a:hover{
     flex: auto;
     height: auto;
     width: 25%;
-    padding: 20px;
-    margin: 10px;
+    margin: 30px;
     overflow: hidden;
     border-radius: 30px;
     min-width: 300px;
@@ -363,6 +366,8 @@ nav a:hover{
     text-align: center;
     padding: 100px 10px;
 }
+
+
 
 
 /*bcolor*/
