--- a/style1.css
+++ b/style1.css
@@ -13,6 +13,7 @@ img{
 body{
     font-family:  'Merriweather', serif;
     background-color: #d1d0cd;
+    overflow-x: hidden;
 }
 
 li{
@@ -26,10 +27,11 @@ a{
 
 main{
     text-align: center;
-    width: 100%;
+    width: 95%;
     margin: 0 auto;
     background-color: #d1d0cd;
     padding-top: -10px;
+    overflow-x: hidden;
 }
 
 section + section{
@@ -102,13 +104,13 @@ li + li{
 .header-img{
     position: relative;
     height: 80vh;
-    width: 95%;
+    width: 80%;
     margin: 50px auto;
     background-color: #000;
     display: inline-block;
     border-radius: 30px;
     position: fixed;
-    left: 2.5%;
+    left: 10%;
     z-index: -10;
 }
 
@@ -237,7 +239,9 @@ nav a:hover{
 }
 
 .about-text dt{
-    width: 20%;
+    width: 11%;
+    min-width: 50px;
+    padding-left: 4px;
 }
 
 .about-text dd{
@@ -252,15 +256,15 @@ nav a:hover{
 
 /*service*/
 .service{
-    background-image: url(img/coffee-gb26093171_1920.jpg);
     padding: 60px 0;
-    width: 95%;
+    width: 85%;
     border-radius: 30px;
     margin: 50px auto;
+    background-image: url(img/coffee-gb26093171_1920.jpg);
     background-size:cover;
-    background-attachment: fixed;
     background-position: center;
 }
+
 
 
 
@@ -271,6 +275,7 @@ nav a:hover{
     display: inline-block;
     border-radius: 10px;
 }
+
 
 /*skils*/
 .skils{
@@ -325,9 +330,17 @@ nav a:hover{
     background-size: cover;
     background-attachment: fixed;
     border-radius: 30px;
-    width: 95%;
+    width: 85%;
     margin: 50px auto;
     margin-bottom: 0;
+}
+
+.works .main-h2{
+    box-shadow: 4px #000;
+}
+
+.bg_white{
+    background-color: rgba(255, 255, 255, 0.3);
 }
 
 
@@ -347,7 +360,7 @@ nav a:hover{
     margin: 30px;
     overflow: hidden;
     border-radius: 30px;
-    min-width: 300px;
+    min-width: 130px;
 }
 
 .portfolio-mask img{
@@ -473,3 +486,4 @@ footer{
         left: 38%; */
     }
 }
+
