--- a/works.css
+++ b/works.css
@@ -35,6 +35,11 @@
     height: 10vh;
 }
 
+/*type*/
+.works_type div+div{
+    margin: 3% 0;
+}
+
 /*design*/
 .works_design_section{
     display: flex;
@@ -53,16 +58,33 @@
 
 /*------------works_descページ----------*/
 .works_desc{
-    width: 80%;
+    width: 70%;
 }
 
 .works_desc_text{
     text-align-last: left;
-    margin: 7% 0;
-    padding: 20px 10px;
+    margin: 5% 0;
 }
 
-.works_desc_text h3{
-    border-bottom: solid 1px;
-    width: 20%;
+
+
+.works_desc_text_right img{
+    width: calc(70%/4);
+}
+
+@media (min-width:600px){
+    .works_desc_text{
+        display: flex;
+        text-align-last: right;
+        width: 100%;
+        justify-content: space-between;
+    }
+    
+    .works_desc_text_left{
+        text-align-last: left;
+    }
+    
+    .works_desc_text_right{
+        width: 68%;
+    }
 }
