--- a/style1.css
+++ b/style1.css
@@ -84,10 +84,13 @@ header{
 .header-top{
     font-size: 12px;
     justify-content: space-between;
-    margin: 4px;
     position: fixed;
     top: 0;
     z-index: 10;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    width: 100%;
 }
 
 #bgwhite.bg_white{
@@ -106,7 +109,7 @@ ul{
     display: flex;
 }
 
-li + li{
+.header-right  li{
     margin-left: 10px;
 }
 
@@ -172,6 +175,11 @@ nav a:hover{
     color: #ebc034;
     transition: all .5s;
 }
+
+#ht.scrolled{
+    background: white;
+}
+
 
 /*fadeIn*/
 @keyframes fadein{
@@ -448,9 +456,9 @@ footer{
 @media (min-width:600px) {
     .header-top{
         display: flex;
-        margin: 2px 15px;
+        padding: 3px;
         font-size: 16px;
-        width: 98%;
+        width: 100%;
     }
 
     .header-right{
@@ -458,7 +466,7 @@ footer{
     }
 
     .header-right li{
-        margin-right: 20px;
+        padding-right: 20px;
     }
 
     .header-text{
